--- a/CSS/index.css
+++ b/CSS/index.css
@@ -35,6 +35,9 @@ main {
   padding: 2rem 0;
 }
 
+/** 
+  THIS IS THE GENERAL STYLE FOR ALL THE
+  TESTIMONIALS COMPONENT */
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -56,6 +59,7 @@ main {
   padding: 3rem 3rem;
   max-width: 349px;
   gap: 1.5rem;
+  /* A  quote icon for the first testimonial. */
 }
 
 .container * {
@@ -65,10 +69,10 @@ main {
 
 .container .quote-icon {
   position: absolute;
-  right: 7%;
-  top: 0;
   max-width: 10rem;
   width: 32%;
+  right: 7%;
+  top: 0;
   z-index: 0;
 }
 
@@ -113,6 +117,9 @@ main {
   font-weight: 500;
 }
 
+/** Container for 
+  'Daniel Clifford'
+  I received a job offer mid-course...*/
 .div--first {
   background: #7541c8;
 }
@@ -139,16 +146,19 @@ main {
   opacity: 0.7;
 }
 
+/** Container for 
+  'Jonathan Walters'
+  The team was very supportive... */
 .div--second {
   background: #48556a;
 }
 
 .div--second .div--profile-info .profile-info--data h1 {
-  color: white;
+  color: #cfcfcf;
 }
 
 .div--second .div--profile-info .profile-info--data p {
-  color: white;
+  color: #cfcfcf;
   opacity: 0.5;
 }
 
@@ -157,10 +167,13 @@ main {
 }
 
 .div--second .profile-message {
-  color: white;
-  opacity: 0.5;
+  color: #cfcfcf;
+  opacity: 0.7;
 }
 
+/** Container for 
+  'Jeanette Harmon'
+  An overall wonderful and rewarding... */
 .div--third {
   background: white;
 }
@@ -175,14 +188,18 @@ main {
 }
 
 .div--third .profile-description {
+  font-weight: 600;
   color: #48556a;
 }
 
 .div--third .profile-message {
   color: #48556a;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
+/** Container for
+  'Patrick Abrams'
+  Awesome teaching support... */
 .div--fourth {
   background: #19212e;
 }
@@ -192,11 +209,12 @@ main {
 }
 
 .div--fourth .div--profile-info .profile-info--data h1 {
-  color: white;
+  font-weight: 600;
+  color: #cfcfcf;
 }
 
 .div--fourth .div--profile-info .profile-info--data p {
-  color: white;
+  color: #cfcfcf;
   opacity: 0.5;
 }
 
@@ -205,10 +223,13 @@ main {
 }
 
 .div--fourth .profile-message {
-  color: white;
-  opacity: 0.5;
+  color: #cfcfcf;
+  opacity: 0.7;
 }
 
+/** Container for 
+  'Kira Whittle' 
+  Such a life-chaning experience... */
 .div--fifth {
   background: white;
 }
@@ -223,12 +244,13 @@ main {
 }
 
 .div--fifth .profile-description {
+  font-weight: 600;
   color: #48556a;
 }
 
 .div--fifth .profile-message {
   color: #48556a;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 @media only screen and (min-width: 90em) {
@@ -247,7 +269,8 @@ main {
         -ms-flex-align: stretch;
             align-items: stretch;
     min-height: 100vh;
-    padding: 0 5rem;
+    width: 100vw;
+    padding: 0;
     overflow: hidden;
   }
   main {
@@ -263,6 +286,9 @@ main {
     height: max-content;
     width: 1290px;
     padding: 0;
+    -webkit-column-gap: 3rem !important;
+            column-gap: 3rem !important;
+    row-gap: 2.2rem !important;
   }
   .container {
     display: -webkit-box;
@@ -280,18 +306,22 @@ main {
             align-items: none;
     max-width: 100%;
     height: 100%;
-    padding: 3rem;
+    padding: 2rem 2.5rem;
   }
   .container .quote-icon {
-    right: 18.5%;
-    top: 2%;
+    right: 13.5%;
+    top: 1%;
   }
   .div--first {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
   }
+  .div--third {
+    padding-left: 3rem;
+  }
   .div--fourth {
+    padding: 2.75rem !important;
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
